<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.iems5722.partytime.JoinHostActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/host_ip_hint"
        android:id="@+id/hostIPHint"
        android:layout_marginTop="109dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hostIP"
        android:text="@string/host_ip_enter"
        android:layout_below="@+id/hostIPHint"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:inputType="numberDecimal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_host_button"
        android:id="@+id/button"
        android:layout_marginTop="71dp"
        android:layout_below="@+id/hostIP"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
