<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
    tools:context=".HomeActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/host_button"
        android:id="@+id/hostButton"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/crazyClickButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_button"
        android:id="@+id/joinButton"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/colorResponse" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stopwatch_button"
        android:id="@+id/stopwatchButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Crazy Click"
        android:id="@+id/crazyClickButton"
        android:layout_below="@+id/stopwatchButton"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Color Activity"
        android:id="@+id/colorResponse"
        android:layout_below="@+id/crazyClickButton"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:visibility="invisible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PATTERN GAME"
        android:id="@+id/patternButton"
        android:visibility="invisible"
        android:layout_below="@+id/joinButton"
        android:layout_alignLeft="@+id/colorResponse"
        android:layout_alignStart="@+id/colorResponse" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Game Queue"
        android:id="@+id/queueButton"
        android:layout_below="@+id/patternButton"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:background="@mipmap/partytime"
        android:layout_alignBottom="@+id/crazyClickButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
